# haven

./: .clangd  .gitignore  CMakeLists.txt  README.md  TODOLIST.md  default.nix  flake.nix  language.md  run.sh
.github/workflows/: ci.yml
bench/: CMakeLists.txt  bench_kw.cc  bench_mat.cc  bench_vec.cc
build-etc/: compiler.cmake  config.cmake  macros.cmake
docs/: haven.ebnf  haven.lark  language.md  syntax.md
examples/: .gitignore  add.hv  add.mc  add2.hv  add2.mc  align.hv  arrays.hv  badlex.mc  badparse.mc  badsemantic1.hv  badsemantic2.mc  basic.hv  basic_math.hv  basic_math.mc  box.hv  box_enum.hv  box_if.hv  box_return.hv  box_struct.hv  btree.mc  cfold_nan.hv  cimport.h  cimport.hv  constant.hv  debuginfo.hv  deep_deref.hv  defer.hv  eigenvals.hv  elseif.hv  elseif_ret.hv  enum.hv  enum.mc  enum_float.hv  enum_fvec.hv  enum_nowrap.hv  enum_struct.hv  enum_template.hv  enum_template_multi.hv  fnptr.hv  fractal.hv  (+36 more)
examples/2025h2/: 2025h2.hv  README.md
examples/vec/: .gitignore  index.hv
include/: ast.h  cfold.h  cimport.h  codegen.h  compiler.h  desugar.h  hashmap.h  intern.h  kv.h  lex.h  parse.h  purity.h  scope.h  semantic.h  tokens.h  tokenstream.h  trie.h  typecheck.h  types.h  utility.h
scripts/: validate-lark.py  verify-examples-compile.sh  verify-examples-grammar.sh
src/: CMakeLists.txt  ast.c  ast_free.c  cfold.c  codegen.c  compiler.c  import.c  internal.h  kv.c  lex.c  main.c  parse.c  rtdemo.cc  scope.c  tokens.c  typecheck.c
src-ml/: README.md  dune-project  haven.opam  raytracer-fmt.hv
src-ml/lib/: dune  haven.ml  loc.ml
src-ml/lib/ast/: ast.ml  convert.ml  dune
src-ml/lib/cst/: cst.ml  dune  emit.ml  locate.ml  pretty.ml
src-ml/lib/lexer/: dune  lexer.ml  pretty.ml
src-ml/lib/parser/: dune  grammar.mly  parser.ml
src-ml/lib/token/: dune  haven_token.ml  token.ml
src-ml/test/: dune
src-new/: CMakeLists.txt  main.hv  tokens.hv
src/ast/: CMakeLists.txt  ast.c  ast_dump.c  ast_emit.c  ast_free.c  visitor.c
src/bins/: CMakeLists.txt
src/bins/haven/: CMakeLists.txt  main.c  main.hv
src/bins/havenfmt/: CMakeLists.txt  havenfmt.c
src/bins/hdr2haven/: CMakeLists.txt  main.c
src/bins/hvast/: CMakeLists.txt  main.c
src/bins/mattc/: CMakeLists.txt  main.c
src/bins/mattfmt/: CMakeLists.txt  mattfmt.c
src/cimport/: CMakeLists.txt  cimport.c  cimport.hv  cimport.ll  cimport.opt.ll  cimport.s  clex.hv
src/codegen/: CMakeLists.txt  binary.c  codegen.c  emit.c  expr.c  fdecl.c  if.c  internal.h  llvm.c  lvalue.c  match.c  preamble.c  stmt.c  utils.c  vdecl.c
src/compiler/: CMakeLists.txt  compiler.c  diag.c  flags.c  import.c  internal.h  link.c  search.c
src/lexer/: CMakeLists.txt  comment.c  diag.c  int.c  internal.h  itype.c  kw.c  lex.c  mat.c  str.c  stream.c  token.c  vec.c
src/parser/: CMakeLists.txt  block.c  enum.c  expression.c  internal.h  parse.c  pattern.c  preamble.c  range.c  statement.c  struct.c  tables.c  toplevel.c  types.c  util.c
src/passes/: CMakeLists.txt  cfold.c  desugar.c  purity.c  purity.hv  semantic.c  tyimplicit.c  typecheck.c  tyverify.c
src/passes/typecheck/: CMakeLists.txt  expr.c  implicit.c  internal.h  resolve.c  typecheck.c  util.c
src/runtime/: CMakeLists.txt  box.hv  index.hv  syscall-amd64.s  syscall.hv
src/runtime/codegen/: CMakeLists.txt
src/tokens/: CMakeLists.txt  tokens.c
src/types/: CMakeLists.txt  repository.c  types.c
src/utilities/: CMakeLists.txt  hashmap.hv  intern.hv  kv.c  kv.hv  scope.c  scope.hv  string_builder.c  tokenstream.c  trie.c  trie.hv  utils.hv
tests/: CMakeLists.txt  coverage.md  hashmap_test.cc  intern_test.cc  kv_test.cc  kw_test.cc  lex_test.cc  mat_test.cc  parse_test.cc  rc_test.cc  string_builder_test.cc  tokenstream_test.cc  trie_test.cc  vec_test.cc
tests/inputs/: CMakeLists.txt  add.hv  add.mc  array.hv  array_local.hv  block.hv  block.ll  block.mc  block.opt.ll  block.s  box.hv  box_pass.hv  box_return.hv  box_store.hv  char.hv  comment.hv  constant.hv  defer.hv  defer.ll  defer.opt.ll  defer.s  enum.hv  enum.mc  enum_nobind.hv  enum_template.hv  enum_template_multi.hv  fnptr.hv  if.hv  iter_down.hv  iter_down.mc  iter_up.hv  iter_up.mc  llist.hv  llist.mc  mat.hv  mat_extract.hv  match.hv  match.mc  match_stmt.hv  prec1.hv  (+22 more)
